crates/c-api/include/wasi.h

/**
 * \brief Configures standard output to be directed to \p callback
 *
 * \param config The config to operate on
 * \param callback A non-null callback must be provided, that will get called
 * for each write with the buffer. A positive return value indicates the amount
 * of bytes written. Negative return values are treated as OS error codes.
 * \param data An optional user provided data that will be passed to \p callback
 * \param finalizer An optional callback to be called to destroy \p data
 */
WASI_API_EXTERN void wasi_config_set_stdout_custom(
    wasi_config_t *config,
    ptrdiff_t (*callback)(void *, const unsigned char *, size_t), void *data,
    void (*finalizer)(void *));
/**
 * \brief Configures standard error output to be directed to \p callback
 *
 * \param config The config to operate on
 * \param callback A non-null callback must be provided, that will get called
 * for each write with the buffer. A positive return value indicates the amount
 * of bytes written. Negative return values are treated as OS error codes.
 * \param data An optional user provided data that will be passed to \p callback
 * \param finalizer An optional callback to be called to destroy \p data
 */
WASI_API_EXTERN void wasi_config_set_stderr_custom(
    wasi_config_t *config,
    ptrdiff_t (*callback)(void *, const unsigned char *, size_t), void *data,
    void (*finalizer)(void *));