crates/misc/dotnet/src/Interop.cs


        internal enum wasm_externkind_t : byte
        {
            WASM_EXTERN_FUNC,
            WASM_EXTERN_GLOBAL,
            WASM_EXTERN_TABLE,
            WASM_EXTERN_MEMORY,
        }

        internal enum wasm_mutability_t : byte
        {
            WASM_CONST,
            WASM_VAR,
        }

        internal static unsafe List<ValueKind> ToValueKindList(Interop.wasm_valtype_vec_t* vec)
        {
            var list = new List<ValueKind>((int)vec->size);

            for (int i = 0; i < (int)vec->size; ++i)
            {
                list.Add(Interop.wasm_valtype_kind(vec->data[i]));
            }

            return list;
        }

        internal static Interop.wasm_valtype_vec_t ToValueTypeVec(IReadOnlyList<ValueKind> collection)
        {
            Interop.wasm_valtype_vec_t vec;
            Interop.wasm_valtype_vec_new_uninitialized(out vec, (UIntPtr)collection.Count);

            int i = 0;
            foreach (var type in collection)
            {
                var valType = Interop.wasm_valtype_new((wasm_valkind_t)type);
                unsafe
                {
                    vec.data[i++] = valType.DangerousGetHandle();
                }
                valType.SetHandleAsInvalid();
            }

            return vec;
        }

        internal static unsafe (byte*[], GCHandle[]) ToUTF8PtrArray(IList<string> strings)
        {
            // Unfortunately .NET cannot currently marshal string[] as UTF-8
            // See: https://github.com/dotnet/runtime/issues/7315
            // Therefore, we need to marshal the strings manually
            var handles = new GCHandle[strings.Count];
            var ptrs = new byte*[strings.Count];
            for (int i = 0; i < strings.Count; ++i)
            {
                handles[i] = GCHandle.Alloc(
                    Encoding.UTF8.GetBytes(strings[i] + '\0'),
                    GCHandleType.Pinned
                );
                ptrs[i] = (byte*)handles[i].AddrOfPinnedObject();
            }

            return (ptrs, handles);
        }

        // Engine imports

        [DllImport(LibraryName)]
        public static extern EngineHandle wasm_engine_new();

        [DllImport(LibraryName)]
        public static extern void wasm_engine_delete(IntPtr engine);

        // Store imports

        [DllImport(LibraryName)]
        public static extern StoreHandle wasm_store_new(EngineHandle engine);

        [DllImport(LibraryName)]
        public static extern void wasm_store_delete(IntPtr engine);

        // Byte vec imports

        [DllImport(LibraryName)]
        public static extern void wasm_byte_vec_new_empty(out wasm_byte_vec_t vec);

        [DllImport(LibraryName)]
        public static extern void wasm_byte_vec_new_uninitialized(out wasm_byte_vec_t vec, UIntPtr length);

        [DllImport(LibraryName)]
        public static extern void wasm_byte_vec_new(out wasm_byte_vec_t vec, UIntPtr length, byte[] data);

        [DllImport(LibraryName)]
        public static extern void wasm_byte_vec_copy(out wasm_byte_vec_t vec, ref wasm_byte_vec_t src);

        [DllImport(LibraryName)]
        public static extern void wasm_byte_vec_delete(ref wasm_byte_vec_t vec);

        // Value type vec imports

        [DllImport(LibraryName)]
        public static extern void wasm_valtype_vec_new_empty(out wasm_valtype_vec_t vec);

        [DllImport(LibraryName)]
        public static extern void wasm_valtype_vec_new_uninitialized(out wasm_valtype_vec_t vec, UIntPtr length);

        [DllImport(LibraryName)]
        public static extern void wasm_valtype_vec_new(out wasm_valtype_vec_t vec, UIntPtr length, IntPtr[] data);

        [DllImport(LibraryName)]
        public static extern void wasm_valtype_vec_copy(out wasm_valtype_vec_t vec, ref wasm_valtype_vec_t src);

        [DllImport(LibraryName)]
        public static extern void wasm_valtype_vec_delete(ref wasm_valtype_vec_t vec);

        // Extern vec imports

        [DllImport(LibraryName)]
        public static extern void wasm_extern_vec_new_empty(out wasm_extern_vec_t vec);

        [DllImport(LibraryName)]
        public static extern void wasm_extern_vec_new_uninitialized(out wasm_extern_vec_t vec, UIntPtr length);

        [DllImport(LibraryName)]
        public static extern void wasm_extern_vec_new(out wasm_extern_vec_t vec, UIntPtr length, IntPtr[] data);

        [DllImport(LibraryName)]
        public static extern void wasm_extern_vec_copy(out wasm_extern_vec_t vec, ref wasm_extern_vec_t src);

        [DllImport(LibraryName)]
        public static extern void wasm_extern_vec_delete(ref wasm_extern_vec_t vec);

        // Import type vec imports

        [DllImport(LibraryName)]
        public static extern void wasm_importtype_vec_new_empty(out wasm_importtype_vec_t vec);

        [DllImport(LibraryName)]
        public static extern void wasm_importtype_vec_new_uninitialized(out wasm_importtype_vec_t vec, UIntPtr length);

        [DllImport(LibraryName)]
        public static extern void wasm_importtype_vec_new(out wasm_importtype_vec_t vec, UIntPtr length, IntPtr[] data);

        [DllImport(LibraryName)]
        public static extern void wasm_importtype_vec_copy(out wasm_importtype_vec_t vec, ref wasm_importtype_vec_t src);

        [DllImport(LibraryName)]
        public static extern void wasm_importtype_vec_delete(ref wasm_importtype_vec_t vec);

        // Export type vec imports

        [DllImport(LibraryName)]
        public static extern void wasm_exporttype_vec_new_empty(out wasm_exporttype_vec_t vec);

        [DllImport(LibraryName)]
        public static extern void wasm_exporttype_vec_new_uninitialized(out wasm_exporttype_vec_t vec, UIntPtr length);

        [DllImport(LibraryName)]
        public static extern void wasm_exporttype_vec_new(out wasm_exporttype_vec_t vec, UIntPtr length, IntPtr[] data);

        [DllImport(LibraryName)]
        public static extern void wasm_exporttype_vec_copy(out wasm_exporttype_vec_t vec, ref wasm_exporttype_vec_t src);

        [DllImport(LibraryName)]
        public static extern void wasm_exporttype_vec_delete(ref wasm_exporttype_vec_t vec);

        // Import type imports

        [DllImport(LibraryName)]
        public static extern unsafe wasm_byte_vec_t* wasm_importtype_module(IntPtr importType);

        [DllImport(LibraryName)]
        public static extern unsafe wasm_byte_vec_t* wasm_importtype_name(IntPtr importType);

        [DllImport(LibraryName)]
        public static extern unsafe IntPtr wasm_importtype_type(IntPtr importType);

        // Export type imports

        [DllImport(LibraryName)]
        public static extern unsafe wasm_byte_vec_t* wasm_exporttype_name(IntPtr exportType);

        [DllImport(LibraryName)]
        public static extern unsafe IntPtr wasm_exporttype_type(IntPtr exportType);

        // Module imports

        [DllImport(LibraryName)]
        public static extern ModuleHandle wasm_module_new(StoreHandle store, ref wasm_byte_vec_t bytes);

        [DllImport(LibraryName)]
        public static extern void wasm_module_imports(ModuleHandle module, out wasm_importtype_vec_t imports);

        [DllImport(LibraryName)]
        public static extern void wasm_module_exports(ModuleHandle module, out wasm_exporttype_vec_t exports);

        [DllImport(LibraryName)]
        public static extern void wasm_module_delete(IntPtr module);

        // Value type imports

        [DllImport(LibraryName)]
        public static extern ValueTypeHandle wasm_valtype_new(wasm_valkind_t kind);

        [DllImport(LibraryName)]
        public static extern void wasm_valtype_delete(IntPtr valueType);

        [DllImport(LibraryName)]
        public static extern ValueKind wasm_valtype_kind(IntPtr valueType);

        // Extern imports

        [DllImport(LibraryName)]
        public static extern wasm_externkind_t wasm_extern_kind(IntPtr ext);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_extern_type(IntPtr ext);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_extern_as_func(IntPtr ext);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_extern_as_global(IntPtr ext);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_extern_as_table(IntPtr ext);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_extern_as_memory(IntPtr ext);

        // Extern type imports

        [DllImport(LibraryName)]
        public static extern wasm_externkind_t wasm_externtype_kind(IntPtr externType);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_externtype_as_functype_const(IntPtr externType);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_externtype_as_globaltype_const(IntPtr externType);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_externtype_as_tabletype_const(IntPtr externType);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_externtype_as_memorytype_const(IntPtr externType);

        // Function imports

        [DllImport(LibraryName)]
        public static extern FunctionHandle wasm_func_new(StoreHandle store, FuncTypeHandle type, WasmFuncCallback callback);

        [DllImport(LibraryName)]
        public static extern void wasm_func_delete(IntPtr function);

        [DllImport(LibraryName)]
        public static unsafe extern IntPtr wasm_func_call(IntPtr function, wasm_val_t* args, wasm_val_t* results);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_func_as_extern(FunctionHandle function);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_global_as_extern(GlobalHandle global);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_memory_as_extern(MemoryHandle memory);

        // Function type imports

        [DllImport(LibraryName)]
        public static extern unsafe wasm_valtype_vec_t* wasm_functype_params(IntPtr funcType);

        [DllImport(LibraryName)]
        public static extern unsafe wasm_valtype_vec_t* wasm_functype_results(IntPtr funcType);

        // Instance imports

        [DllImport(LibraryName)]
        public static extern unsafe InstanceHandle wasm_instance_new(StoreHandle store, ModuleHandle module, IntPtr[] imports, out IntPtr trap);

        [DllImport(LibraryName)]
        public static extern void wasm_instance_delete(IntPtr ext);

        [DllImport(LibraryName)]
        public static extern void wasm_instance_exports(InstanceHandle instance, out wasm_extern_vec_t exports);

        // Function type imports

        [DllImport(LibraryName)]
        public static extern FuncTypeHandle wasm_functype_new(ref wasm_valtype_vec_t parameters, ref wasm_valtype_vec_t results);

        [DllImport(LibraryName)]
        public static extern void wasm_functype_delete(IntPtr functype);

        // Global type imports

        [DllImport(LibraryName)]
        public static extern GlobalTypeHandle wasm_globaltype_new(IntPtr valueType, wasm_mutability_t mutability);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_globaltype_delete(IntPtr globalType);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_globaltype_content(IntPtr globalType);

        [DllImport(LibraryName)]
        public static extern wasm_mutability_t wasm_globaltype_mutability(IntPtr globalType);

        // Memory type imports

        [DllImport(LibraryName)]
        public static extern unsafe MemoryTypeHandle wasm_memorytype_new(wasm_limits_t* limits);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_memorytype_delete(IntPtr memoryType);


        [DllImport(LibraryName)]
        public static extern unsafe wasm_limits_t* wasm_memorytype_limits(MemoryTypeHandle memoryType);

        // Trap imports
